NXBT monitorctl.sh: Add more info about the current JVM